# project-5-git

./: Automaton.h  BlockCommentAutomaton.h  CMakeLists.txt  DataStructures.h  Graph.h  IDAutomaton.h  Interpreter.h  Lexer.h  LineCommentAutomaton.h  MatcherAutomaton.h  Parser.h  Relation.h  StringAutomaton.h  Token.h  Tuple.h  a.out  input.txt  lab1  main.cpp  toHoldTests
Lab3PassOffCases/3-100/: input5.txt  input6.txt  input9.txt
Lab3PassOffCases/3-80/: input0.txt  input1.txt  input2.txt  input3.txt  input7.txt  input8.txt
a.out.dSYM/Contents/Resources/DWARF/: a.out
